--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,24 @@
-buildscript {
-    apply plugin: 'hyperskill'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:$hs.spring.bootVersion"
-        classpath "io.spring.gradle:dependency-management-plugin:$hs.spring.dependencyManagementVersion"
-    }
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '2.7.1'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
 
 repositories {
     mavenCentral()
 }
 
-sourceSets.main.resources.srcDirs = ["src/resources"]
-
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter:2.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-actuator:2.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
@@ -30,5 +28,8 @@ dependencies {
 
     runtimeOnly 'com.h2database:h2:2.1.210'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
+}
 
+tasks.named('test') {
+    useJUnitPlatform()
 }
